k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: taskflow

spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
        - name: api
          image: taskflow-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          
          # CHecking Liveness and readiness 
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15 # wait 15s before first check
            periodSeconds: 20 # chekc every 20s
            failureThreshold: # restart after 3 consecutive fails
          
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 2 # pull from load blancer after 2 fails
